--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="js" lang="{{ request.locale.iso_code }}">
+<html style="opacity:0 !important;" class="js" lang="{{ request.locale.iso_code }}">
   <head>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
@@ -653,12 +653,10 @@
       <script src="{{ 'cart-drawer.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
     <!-- Begin Shopify–payment-cart JavaScript -->
-<script type="text/javascript">
-
-  var mid = '4509';
-
-</script>
-<script src="https://checkout-merchant.snapmint.com/js/v1/4509" defer></script>
-<!-- End Shopify-payment JavaScript -->
+    <script type="text/javascript">
+      var mid = '4509';
+    </script>
+    <script src="https://checkout-merchant.snapmint.com/js/v1/4509" defer></script>
+    <!-- End Shopify-payment JavaScript -->
   </body>
 </html>
