--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,5 +1,5 @@
 <!doctype html>
-<html style="opacity:0 !important;" class="js" lang="{{ request.locale.iso_code }}">
+<html class="js" lang="{{ request.locale.iso_code }}">
   <head>
     <script>
       document.addEventListener('DOMContentLoaded', function () {
